# contact

./: .gitignore  README.md  db_handler.py  globals.py  input_handlers.py  main.py  pyproject.toml  requirements.txt  save_to_radio.py  settings.py
.github/workflows/: release.yaml
contact/: __main__.py  globals.py  settings.py
contact/localisations/: en.ini
contact/message_handlers/: rx_handler.py  tx_handler.py
contact/ui/: colors.py  contact_ui.py  control_ui.py  curses_ui.py  default_config.py  dialog.py  menus.py  nav_utils.py  splash.py  ui_state.py  user_config.py
contact/utilities/: arg_parser.py  config_io.py  control_utils.py  db_handler.py  input_handlers.py  interfaces.py  save_to_radio.py  show_map.py  singleton.py  telemetry_beautifier.py  utils.py  validation_rules.py
localisations/: en.ini
mcontact/: main.py  settings.py
mcontact/message_handlers/: rx_handler.py  tx_handler.py
mcontact/ui/: colors.py  control_ui.py  curses_ui.py  splash.py  user_config.py
mcontact/utilities/: interfaces.py  save_to_radio.py  utils.py
message_handlers/: rx_handler.py  tx_handler.py
mtcontact/: main.py  settings.py
mtcontact/message_handlers/: rx_handler.py  tx_handler.py
mtcontact/ui/: colors.py  control_ui.py  curses_ui.py  dialog.py  splash.py  user_config.py
mtcontact/utilities/: db_handler.py  input_handlers.py  interfaces.py  utils.py
ui/: colors.py  control_ui.py  curses_ui.py  default_config.py  menus.py  splash.py  user_config.py
utilities/: db_handler.py  input_handlers.py  utils.py
