[project]
name = "mtcontact"
version = "1.2.3"
description = "This Python curses client for Meshtastic is a terminal-based client designed to manage device settings, enable mesh chat communication, and handle configuration backups and restores."
authors = [
    {name = "pdxlocations",email = "you@example.com"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "meshtastic (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mtcontact = "mtcontact.main:start"
